# libnftnl

./: .gitignore  .gitlab-ci.yml  INSTALL  Makefile.am  README.md  configure.ac  install.sh  libnftnl.pc.in
.github/workflows/: release.yml
include/libnftnl/: Makefile.am  expr.h  ndpi.h
include/linux/netfilter/: Makefile.am  abcde.h
src/: Makefile.am  expr_ops.c
src/expr/: abcde.c  ndpi.c
